--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="안녕하세요."
-            android:textColor="#FF0000"/>
+            android:textColor="#FF0000"
+            android:textSize="14sp"/>
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="반갑습니다."
-            android:textColor="#ADFF2F"/>
+            android:textColor="#ADFF2F"
+            android:textSize="25sp"/>
 
 
         <TextView
