--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="반갑습니다."
-            android:textColor="#ADFF2F"
-            android:textSize="25sp"/>
+            android:textColor="#5500ff"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
 
 
         <TextView
